<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_safevisionary_driver</name>
  <version>1.0.3</version>
  <description>Provides an interface to read the sensor output of a SICK Safevisionary sensor in ROS 2</description>
  <maintainer email="grosse@fzi.de">Marvin Grosse Besselmann</maintainer>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>
  <maintainer email="jochen.lienhart@sick.de">Jochen Lienhart</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>cv_bridge</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>sick_safevisionary_base</depend>
  <depend>sick_safevisionary_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
